--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but whatsapp-widget doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but teste-project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="wpp-widget"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
