--- a/example.html
+++ b/example.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>This is an example page</h1>
-  <script src="./dist/app.js" type="text/javascript"></script>
+  <script src="https://dsd6ibb6r1wlb.cloudfront.net/app.js" type="text/javascript"></script>
   <script>
     new WppWidget({
       'title': 'Envie-nos uma mensagem 2! 👋',
