--- a/demo/index.html
+++ b/demo/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
   <h1>This is an example page</h1>
-  <script src="https://dsd6ibb6r1wlb.cloudfront.net/app.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/gh/traction-app/whatsapp-widget/dist/app.js" type="text/javascript"></script>
   <script>
     new WppWidget({
-      'title': 'Envie-nos uma mensagem 2! 👋',
-      'description': 'lorem ipsum dolor sit amet',
+      'title': 'Envie-nos uma mensagem!',
+      'message': 'lorem ipsum dolor sit amet',
       'endpoint': 'Test'
     })
   </script>
