--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>This is an example page</h1>
-  <script src="https://cdn.jsdelivr.net/gh/traction-app/whatsapp-widget/dist/app.js?v=1" type="text/javascript"></script>
+  <script src="https://d2st9y38zyzf5b.cloudfront.net/app.js" type="text/javascript"></script>
   <script>
     new WppWidget({
       'title': 'Envie-nos uma mensagem!',
