--- a/demo/index.html
+++ b/demo/index.html
@@ -7,15 +7,19 @@
 </head>
 <body>
   <h1>This is an example page</h1>
-  <script src="//d2st9y38zyzf5b.cloudfront.net/app.js" type="text/javascript"></script>
   <script>
-    new WppWidget({
-      'title': 'Envie-nos uma mensagem!',
-      'message': 'lorem ipsum dolor sit amet',
-      'endpoint': 'Test',
-      'cdnPath': '//d2st9y38zyzf5b.cloudfront.net'
-    })
-    this.baseUrl = 'https://d2st9y38zyzf5b.cloudfront.net/'
+    (function(callback) {
+      var s = document.createElement( 'script' );s.setAttribute( 'src','https://d2st9y38zyzf5b.cloudfront.net/app.js' );
+      s.onload=callback;
+      document.body.appendChild( s );
+    })(function() {
+      new WppWidget({
+        'title': 'Envie-nos uma mensagem!',
+        'message': 'lorem ipsum dolor sit amet',
+        'endpoint': 'Test',
+        'cdnPath': 'https://d2st9y38zyzf5b.cloudfront.net/'
+      })
+    });
   </script>
 </body>
 </html>
