--- a/demo/index.html
+++ b/demo/index.html
@@ -8,17 +8,13 @@
 <body>
   <h1>This is an example page</h1>
   <script>
-    (function(callback) {
-      var s = document.createElement( 'script' );s.setAttribute( 'src','https://d2st9y38zyzf5b.cloudfront.net/app.js' );
-      s.onload=callback;
+    ;(function(src, config) {
+      var s = document.createElement( 'script' );s.setAttribute( 'src', src );
+      s.onload = function () { new WppWidget(config, this) }
       document.body.appendChild( s );
-    })(function() {
-      new WppWidget({
-        'title': 'Envie-nos uma mensagem!',
-        'message': 'lorem ipsum dolor sit amet',
-        'endpoint': 'Test',
-        'cdnPath': 'https://d2st9y38zyzf5b.cloudfront.net/'
-      })
+    })('https://d2st9y38zyzf5b.cloudfront.net/app.js', {
+      'endpoint': 'Test',
+      'phone': '55169823945'       
     });
   </script>
 </body>
